--- a/hw1/makefile
+++ b/hw1/makefile
@@ -3,18 +3,16 @@ CHECKFLAGS = --leak-check=full -s --show-leak-kinds=all --track-origins=yes
 
 all: 0811549
 
-inheritance.o: inheritance.cpp
-	g++ -c inheritance.cpp
-main.o: main.cpp
-	g++ -c main.cpp
-0811549: main.o inheritance.o
-	g++ -o 0811549 main.o inheritance.o
+delrepeat.o: insertion_sort.cpp
+	g++ -c insertion_sort.cpp
+0811549: insertion_sort.o
+	g++ -o 0811549 insertion_sort.o
 
 do:
 	./0811549 input.in output.out
 
 diff:
-	diff -w output.out an1 > diff1
+	diff -w output1.out an1 > diff1
 
 check:
 	$(CHECKCC) $(CHECKFLAGS) ./0811549 input.in output.out
