read file have problem

--- a/hw2/makefile
+++ b/hw2/makefile
@@ -9,13 +9,13 @@ delrepeat.o: divide_and_conquer.cpp
 	g++ -o 0811549 divide_and_conquer.o
 
 do:
-	./0811549 input.in output.out
+	./0811549 input_2.in output.out
 
 diff:
 	diff -w output1.out an1 > diff1
 
 check:
-	$(CHECKCC) $(CHECKFLAGS) ./0811549 input.in output.out
+	$(CHECKCC) $(CHECKFLAGS) ./0811549 input_2.in output.out
 
 clean:
 	rm -rf *.o 0811549 *.out
